[tool.poetry]
name = "inicadores"
version = "0.1.0"
description = "Correlation testing app"
authors = ["ricardocancar@mail.com"]
readme = "README.md"
package-mode = false
# packages = []

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.55.0"
pandas = "2.3.3"
numpy = "2.4.3"
yfinance = "1.2.0"
fredapi = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"